popup z-index fixed

--- a/src/app/home/price-prediction/price-prediction.component.scss
+++ b/src/app/home/price-prediction/price-prediction.component.scss
@@ -122,15 +122,23 @@ p.btn.berps-btn {
   margin-bottom: 5px;
 }
 button.btn.berps-btn {
-  margin: 0px 20px;
+  margin: 5px;
   font-weight: 600;
   border-radius: 22px;
   font-size: 20px;
   color: white;
-  padding: 5px 23px;
+  padding: 3px 23px;
 }
-
+.berp-score {
+  font-size: 21px;
+}
 .btn-danger {
   background-color: red;
   border-color: #ff0000;
+}
+.col-lg-6 h2 {
+  line-height: 1.2;
+}
+.body_div {
+  height: 385px;
 }
